--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>ch02-hello</module>
         <module>ch03-eureka</module>
+        <module>ch04-ribbon</module>
     </modules>
 
     <build>
