Create: 第05章《服务容错保护：Spring Cloud Hystrix》学习源码

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ch02-hello</module>
         <module>ch03-eureka</module>
         <module>ch04-ribbon</module>
+        <module>ch05-hystrix</module>
     </modules>
 
     <build>
