Create: 第06章《声明式服务调用：Spring Cloud Feign》学习源码

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>ch03-eureka</module>
         <module>ch04-ribbon</module>
         <module>ch05-hystrix</module>
+        <module>ch06-feign</module>
     </modules>
 
     <build>
