--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>ch05-hystrix</module>
         <module>ch06-feign</module>
         <module>ch07-gateway</module>
+        <module>ch08-config</module>
     </modules>
 
     <build>
