Create: 第10章《消息驱动的微服务：Spring Cloud Stream》学习源码

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>ch07-gateway</module>
         <module>ch08-config</module>
         <module>ch09-bus</module>
+        <module>ch10-stream</module>
     </modules>
 
     <build>
