Create: 第11章《分布式服务跟踪：Spring Cloud Sleuth》学习源码

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>ch08-config</module>
         <module>ch09-bus</module>
         <module>ch10-stream</module>
+        <module>ch11-trace</module>
     </modules>
 
     <build>
