use UTF-8 encoding

--- a/ch02-hello/src/main/resources/application.properties
+++ b/ch02-hello/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hello
 server.port=8885
 spring.profiles.active=dev
 
-# /info¶ËµãĞÅÏ¢ÅäÖÃ
+# /infoç«¯ç‚¹ä¿¡æ¯é…ç½®
 info.app.name=spring-boot-hello
 info.app.version=v1.0.0
 
