--- a/ch03-eureka/ch03-eureka-ha/src/main/resources/application-peer2.properties
+++ b/ch03-eureka/ch03-eureka-ha/src/main/resources/application-peer2.properties
@@ -1,6 +1,6 @@
 spring.application.name=eureka-server
 server.port=1112
-# ×¢²áÖĞĞÄÖ÷»úÃû£¬ĞèÒªĞŞ¸Ä hosts ÎÄ¼ş£¬ÅäÖÃ 127.0.0.1 peer1 ºÍ 127.0.0.1 peer2
+# æ³¨å†Œä¸­å¿ƒä¸»æœºåï¼Œéœ€è¦ä¿®æ”¹ hosts æ–‡ä»¶ï¼Œé…ç½® 127.0.0.1 peer1 å’Œ 127.0.0.1 peer2
 eureka.instance.hostname=peer2
-# ×¢²áÖĞĞÄ peer2 Ö¸Ïò peer1
+# æ³¨å†Œä¸­å¿ƒ peer2 æŒ‡å‘ peer1
 eureka.client.serviceUrl.defaultZone=http://peer1:1111/eureka/
