--- a/ch03-eureka/ch03-eureka-ha/src/main/resources/application.properties
+++ b/ch03-eureka/ch03-eureka-ha/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# ·şÎñ¶Ë¿Ú
+# æœåŠ¡ç«¯å£
 server.port=1111
 
 eureka.instance.hostname=localhost
-# ÓÉÓÚ¸ÃÓ¦ÓÃÎª×¢²áÖĞĞÄ£¬ËùÒÔÉèÖÃÎªfalse£¬´ú±í²»Ïò×¢²áÖĞĞÄ×¢²á×Ô¼º
+# ç”±äºè¯¥åº”ç”¨ä¸ºæ³¨å†Œä¸­å¿ƒï¼Œæ‰€ä»¥è®¾ç½®ä¸ºfalseï¼Œä»£è¡¨ä¸å‘æ³¨å†Œä¸­å¿ƒæ³¨å†Œè‡ªå·±
 eureka.client.register-with-eureka=false
-# ÓÉÓÚ×¢²áÖĞĞÄµÄÖ°Ôğ¾ÍÊÇÎ¬»¤·şÎñÊµÀı£¬Ëü²¢²»ĞèÒªÈ¥¼ìË÷·şÎñ£¬ËùÒÔÒ²ÉèÖÃÎªfalse
+# ç”±äºæ³¨å†Œä¸­å¿ƒçš„èŒè´£å°±æ˜¯ç»´æŠ¤æœåŠ¡å®ä¾‹ï¼Œå®ƒå¹¶ä¸éœ€è¦å»æ£€ç´¢æœåŠ¡ï¼Œæ‰€ä»¥ä¹Ÿè®¾ç½®ä¸ºfalse
 eureka.client.fetch-registry=false
-# ÉèÖÃ×¢²áÖĞĞÄ·şÎñµØÖ·
+# è®¾ç½®æ³¨å†Œä¸­å¿ƒæœåŠ¡åœ°å€
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
