--- a/ch03-eureka/ch03-eureka-hello/src/main/resources/application.properties
+++ b/ch03-eureka/ch03-eureka-hello/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# 设置应用名称
+# 璁剧疆搴旂敤鍚嶇О
 spring.application.name=hello-service
 
-# 设置注册中心服务地址
+# 璁剧疆娉ㄥ唽涓績鏈嶅姟鍦板潃
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
