--- a/ch06-feign/ch06-feign-consumer/src/main/resources/application.properties
+++ b/ch06-feign/ch06-feign-consumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=feign-consumer
 server.port=9001
 
-# 设置注册中心服务地址
+# 璁剧疆娉ㄥ唽涓績鏈嶅姟鍦板潃
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
