--- a/ch07-gateway/ch07-gateway-simple/src/main/resources/application.properties
+++ b/ch07-gateway/ch07-gateway-simple/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=api-gateway
 server.port=5555
 
-# ÉèÖÃ×¢²áÖĞĞÄ·şÎñµØÖ·
+# è®¾ç½®æ³¨å†Œä¸­å¿ƒæœåŠ¡åœ°å€
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 
-# ÃæÏò·şÎñµÄÂ·ÓÉ
+# é¢å‘æœåŠ¡çš„è·¯ç”±
 zuul.routes.api-a.path=/api-a/**
 zuul.routes.api-a.serviceId=hello-service
 
