--- a/ch08-config/ch08-config-server/src/main/resources/application.properties
+++ b/ch08-config/ch08-config-server/src/main/resources/application.properties
@@ -1,28 +1,28 @@
 spring.application.name=config-server
 server.port=7001
 
-# git¹ÜÀíÅäÖÃ
+# gitç®¡ç†é…ç½®
 #spring.cloud.config.server.git.uri=http://git.oschina.net/didispace/SpringCloud-Learning/
 #spring.cloud.config.server.git.searchPaths=spring_cloud_in_action/config-repo
 #spring.cloud.config.server.git.username=username
 #spring.cloud.config.server.git.password=password
 
-# ½¡¿µ¼ì²éÅäÖÃ
+# å¥åº·æ£€æŸ¥é…ç½®
 #spring.cloud.config.server.health.repositories.check.name=check-repo
 #spring.cloud.config.server.health.repositories.check.label=master
 #spring.cloud.config.server.health.repositories.check.profiles=default
 
-# ¹Ø±Õ½¡¿µ¼ì²é
+# å…³é—­å¥åº·æ£€æŸ¥
 #spring.cloud.config.server.health.enabled=false
 
-# È«¾Ö²ÎÊı
+# å…¨å±€å‚æ•°
 #spring.cloud.config.server.overrides.name=didi
 #spring.cloud.config.server.overrides.from=shanghai
 
-# ¿ªÆô±¾µØÅäÖÃ
+# å¼€å¯æœ¬åœ°é…ç½®
 spring.profiles.active=native
 
-# °²È«±£»¤£¬ĞèÒªÒıÈëspring-boot-starter-security
+# å®‰å…¨ä¿æŠ¤ï¼Œéœ€è¦å¼•å…¥spring-boot-starter-security
 #security.user.name=user
 #security.user.password=37cc5635-559b-4e6f-b633-7e932b813f73
 
