--- a/ch09-bus/ch09-bus-config-client-eureka-rabbitmq/src/main/resources/bootstrap.properties
+++ b/ch09-bus/ch09-bus-config-client-eureka-rabbitmq/src/main/resources/bootstrap.properties
@@ -9,7 +9,7 @@ spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.config.profile=dev
 spring.cloud.config.failFast=true
 
-# RabbitMQÁ¬½ÓÅäÖÃ
+# RabbitMQè¿æ¥é…ç½®
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 spring.rabbitmq.addresses=192.168.0.105:5672
