--- a/ch09-bus/ch09-bus-config-server-eureka-kafka/src/main/resources/application.properties
+++ b/ch09-bus/ch09-bus-config-server-eureka-kafka/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=7001
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-# ¿ªÆô±¾µØÅäÖÃ
+# å¼€å¯æœ¬åœ°é…ç½®
 spring.profiles.active=native
-# git ²Ö¿âÅäÖÃ
+# git ä»“åº“é…ç½®
 #spring.cloud.config.server.git.uri=http://git.oschina.net/didispace/SpringCloud-Learning/
 #spring.cloud.config.server.git.searchPaths=spring_cloud_in_action/config-repo
 #spring.cloud.config.server.git.username=username
