--- a/ch10-stream/ch10-stream-producer/src/main/resources/application.properties
+++ b/ch10-stream/ch10-stream-producer/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8002
 spring.cloud.stream.bindings.input.content-type=application/json
 spring.cloud.stream.bindings.output.content-type=application/json
 
-# RabbitMQÁ¬½ÓÅäÖÃ
+# RabbitMQè¿æ¥é…ç½®
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 spring.rabbitmq.addresses=192.168.0.105:5672
