--- a/ch03-eureka/ch03-eureka-ha/src/main/resources/application-peer1.properties
+++ b/ch03-eureka/ch03-eureka-ha/src/main/resources/application-peer1.properties
@@ -1,6 +1,6 @@
 spring.application.name=eureka-server
 server.port=1111
-# ×¢²áÖĞĞÄÖ÷»úÃû£¬ĞèÒªĞŞ¸Ä hosts ÎÄ¼ş£¬ÅäÖÃ 127.0.0.1 peer1 ºÍ 127.0.0.1 peer2
+# æ³¨å†Œä¸­å¿ƒä¸»æœºåï¼Œéœ€è¦ä¿®æ”¹ hosts æ–‡ä»¶ï¼Œé…ç½® 127.0.0.1 peer1 å’Œ 127.0.0.1 peer2
 eureka.instance.hostname=peer1
-# ×¢²áÖĞĞÄ peer1 Ö¸Ïò peer2
+# æ³¨å†Œä¸­å¿ƒ peer1 æŒ‡å‘ peer2
 eureka.client.serviceUrl.defaultZone=http://peer2:1112/eureka/
