--- a/ch04-ribbon/ch04-ribbon-retry/src/main/resources/application.properties
+++ b/ch04-ribbon/ch04-ribbon-retry/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# ÉèÖÃÓ¦ÓÃÃû³Æ
+# è®¾ç½®åº”ç”¨åç§°
 spring.application.name=ribbon-consumer
 
 server.port=9000
 
-# ÉèÖÃ×¢²áÖĞĞÄ·şÎñµØÖ·
+# è®¾ç½®æ³¨å†Œä¸­å¿ƒæœåŠ¡åœ°å€
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
 
-# ¿ªÆôÖØÊÔ»úÖÆ£¬£¨Ä¬ÈÏÖµ£ºfalse£©
+# å¼€å¯é‡è¯•æœºåˆ¶ï¼Œï¼ˆé»˜è®¤å€¼ï¼šfalseï¼‰
 spring.cloud.loadbalancer.retry.enabled=true
