--- a/ch10-stream/ch10-stream-consumer/src/main/resources/application.properties
+++ b/ch10-stream/ch10-stream-consumer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8001
 #spring.cloud.stream.bindings.input.destination=raw-sensor-data
 
 # RabbitMQ
-# RabbitMQÁ¬½ÓÅäÖÃ
+# RabbitMQè¿æ¥é…ç½®
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.addresses=192.168.0.105:5672
