--- a/ch10-stream/ch10-stream-hello/src/main/resources/application.properties
+++ b/ch10-stream/ch10-stream-hello/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=stream-hello
-# RabbitMQÁ¬½ÓÅäÖÃ
+# RabbitMQè¿æ¥é…ç½®
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 spring.rabbitmq.addresses=192.168.0.105:5672
