--- a/ch11-trace/ch11-trace-zipkin-server-stream/src/main/resources/application.properties
+++ b/ch11-trace/ch11-trace-zipkin-server-stream/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=zipkin-server-stream
 server.port=9411
 
-# RabbitMQÁ¬½ÓÅäÖÃ
+# RabbitMQè¿æ¥é…ç½®
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 spring.rabbitmq.addresses=192.168.0.105:5672
